1.9/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
      - name: app
        image: amolmagdum25/ping-pong:1.0
        imagePullPolicy: IfNotPresent
